--- a/src/reset.css
+++ b/src/reset.css
@@ -3,6 +3,14 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+input {
+	box-shadow: none !important;
+}
 body {
-	background: #10182D;
+	background: #0b1222;
+}
+h1, h2 {
+	background: -webkit-linear-gradient(#16bb53, #78ffaa);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
