--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,15 @@
+.divider {
+	background: #16bb53;
+	/* Old browsers */
+	background: -moz-linear-gradient(top, #16bb53 0%, #71ed92 100%);
+	/* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #16bb53 0%, #71ed92 100%);
+	/* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #16bb53 0%, #71ed92 100%);
+	height: 100px;
+	width :100%;
+}
+
 #welcome {
 	min-width: 100vw;
 	min-height: 90vh;
@@ -7,15 +19,14 @@
 	flex-direction: column;
 }
 
-#welcome h3 {
-	color: white;
+#welcome h1 {
 	font-size: 3rem;
-	margin-bottom: 1rem;
+	margin-bottom: 1.5rem;
 }
 
 #welcome p {
 	color: white;
-	opacity: 0.5;
+	line-height: 2;
 	margin-bottom: 3rem;
 	width: 65%;
 	min-width: 300px
@@ -39,7 +50,7 @@
 }
 /* Pricing Start */
 #home #pricing {
-	height: 100vh;
+	height: 80vh;
 }
 #home #pricing header h1 {
 	margin-bottom: 1.5rem;
@@ -137,7 +148,7 @@
 	/* Storage Start */
 	#home #storage {
 		flex-direction: column;
-		margin-bottom: 20%;
+		margin-bottom: 50%;
 	}
 	#home #storage .d-flex {
 		width: 100%;
@@ -156,5 +167,9 @@
 	}
 	#home #pricing .plans .plan.plan-2 {
 		margin-bottom: 5rem;
+	}
+
+	#welcome h1 {
+		font-size: 2.5rem;
 	}
 }
