added file upload progress bar and changed form to axios request

--- a/src/css/upload.css
+++ b/src/css/upload.css
@@ -2,3 +2,9 @@
 	background: none !important;
 	content: "Browse" !important;
 }
+#upload-progress {
+	margin-bottom: 2.5rem;
+}
+#upload-progress .progress-bar {
+	
+}
