--- a/src/css/home.css
+++ b/src/css/home.css
@@ -11,12 +11,12 @@
 }
 
 #welcome {
-	min-width: 100vw;
+	width: 100vw;
 	min-height: 90vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
+	flex-direction: row;
 }
 
 #welcome h1 {
@@ -30,6 +30,13 @@
 	margin-bottom: 3rem;
 	width: 65%;
 	min-width: 300px
+}
+
+#welcome .image {
+	
+}
+#welcome img {
+	max-width: 400px;
 }
 
 
@@ -50,7 +57,8 @@
 }
 /* Pricing Start */
 #home #pricing {
-	height: 80vh;
+	min-height: 80vh;
+	margin-bottom: 3rem;
 }
 #home #pricing header h1 {
 	margin-bottom: 1.5rem;
@@ -98,12 +106,6 @@
 #home #pricing .plans .plan.active ul li  {
 	color: #313131;
 }
-#home #pricing .plans .plan-1 {
-	
-}
-#home #pricing .plans .plan-2 {
-	
-}
 /* Pricing End */
 
 /* Storage Start */
@@ -127,9 +129,76 @@
 	margin-right: 3rem;
 }
 /* Storage End */
+/* Footer Start */
+footer {
+	border-top: 1px solid rgba(180, 166, 255, 0.2);
+	padding: 3rem 1.5rem 1.5rem;
+}
+footer .grid {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-gap: 1.5rem;
+}
+footer .col {
+	display: flex;
+	flex-direction: column;
+}
+footer .col p {
+	color: white;
+}
+footer .col h6 {
+	font-weight: 600;
+	color: #16bb53 !important;
+	margin-bottom: 1rem;
+}
+
+footer .col ul li {
+	color: rgb(226, 226, 226);
+}
+
+footer .col .socials {
+	display: flex;
+	justify-content: space-between;
+	max-width: 250px;
+}
+
+footer .col .socials i {
+	color: white;
+	background: #16bb53;
+	/* Old browsers */
+	background: -moz-linear-gradient(-45deg, #16bb53 0%, #78ffaa 100%);
+	/* FF3.6-15 */
+	background: -webkit-linear-gradient(-45deg, #16bb53 0%, #78ffaa 100%);
+	/* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(135deg, #16bb53 0%, #78ffaa 100%);
+	height: 35px;
+	width: 35px;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-right: 1rem;
+}
+footer .col .socials i {
+	margin: 0;
+	transition: all 0.4s ease-in-out;
+	cursor: pointer;
+}
+/* Footer End */
 
 
 @media screen and (max-width: 992px) {
+	#home #welcome {
+		margin-top: 3rem;
+		margin-bottom: 6rem;
+	}
+	#home #welcome img {
+		width: 100%;
+		max-height: 300px;
+	}
+	#home #welcome .text {
+		margin-bottom: 3rem;
+	}
 	/* Pricing Start */
 	#home .plans {
 		flex-direction: column;
@@ -139,12 +208,20 @@
 		width: 100%;
 	}
 	/* Pricing End */
-	/* Storage Start */
-
-	/* Storage End */
+	footer .grid {
+		grid-template-columns: repeat(3, 1fr);
+	}
 }
 
 @media screen and (max-width: 768px) {
+	#home #welcome {
+		flex-direction: column;
+		margin-bottom: 8rem;
+	}
+	#welcome img {
+		width: 80%;
+		max-height: 250px !important;
+	}
 	/* Storage Start */
 	#home #storage {
 		flex-direction: column;
@@ -171,5 +248,19 @@
 
 	#welcome h1 {
 		font-size: 2.5rem;
+	}
+
+	footer .grid {
+		grid-template-columns: 50% 50%;
+		grid-gap: 1rem;
+	}
+	footer .grid .col {
+		padding: 0;
+	}
+	footer .grid .col:last-of-type {
+		grid-column: 1 / 3;
+	}
+	footer .grid .col .socials {
+		
 	}
 }
