--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -2,25 +2,19 @@
 	width: 100%;
 }
 
+#spinner {
+	position: fixed;
+	right: 1rem;
+	bottom: 1rem;
+	width: 60px;
+}
+
 .form-control:focus {
 	border-color: #0084ff;
 }
 
 .pointer {
 	cursor: pointer;
-}
-
-#login-form {
-	
-}
-#login-form h1 {
-}
-
-#signup-form {
-	
-}
-#signup-form h1 {
-	
 }
 
 .demo-account {
